# Epson-Waste-Reset

./: .gitignore  CMakeLists.txt  README.md  database.json  mull.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: update_database.yml
cli/: main.cpp
docs/: ARCHITECTURE.md  REFACTOR_ROADMAP.md  TESTING.md
docs/adr/: 0001-multi-vendor-reset-protocol.md
docs/arch/: README.md  model.edn  views.edn
include/ewr/: domain.h  executor.h  generator.h  parser.h  proto.h  protocol.h  result.h  transport.h  vendor.h
scripts/: mull.sh  mutation_test.py  update_db.py
src/: executor.cpp  generator.cpp  parser.cpp  protocol.cpp  usb_linux.cpp  usb_windows.cpp  vendor.cpp
tests/: BYTE_PARITY.txt  byte_parity_check.cpp  executor_test.cpp  golden_test.cpp  property_test.cpp  verify_against_upstream.sh
tests/tools/: dump_seq_refactor.cpp  dump_seq_upstream.cpp
